--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "0.0.1",
   "description": "Personal website for Ricky Bakken",
   "author": "Danny Hadley <danny@dadleyy.com>",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-coffee": "~0.10.1",
+    "node-bourbon": "~1.2.2",
+    "node-neat": "~1.3.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-angular-templates": "~0.5.4",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-smash": "~0.1.0",
+    "grunt-contrib-jade": "~0.11.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "dotenv": "~0.2.8",
+    "grunt-contrib-copy": "~0.5.0"
+  }
 }
