feature/#9 - grunt and bower build steps
added bower and grunt install lines

explicitly call "npm install"

added gem dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: node_js
 node_js:
   - "0.10"
+install:
+  - gem install sass
+  - gem install bourbon
+  - gem install neat 
+  - npm install bower -g
+  - npm install grunt-cli -g
+  - bower install
+  - npm install
+script:
+  - grunt
