some styling on track elements

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "~1.2.16",
     "angular-resource": "~1.2.16",
-    "angular-route": "~1.2.16"
+    "angular-route": "~1.2.16",
+    "d3": "~3.4.8",
+    "waveform": "*"
   }
 }
