--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,8 @@ DirectoryIndex index.html
   RewriteEngine On
   RewriteBase /
 
+  RewriteRule ^api\/images\/(.*)$ http://$1 [P,L]
+
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^(.*)$ index.html?$1 [L,QSA]
