--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "grunt-angular-templates": "~0.5.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jade": "~0.11.0",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-smash": "~0.1.0",
     "dotenv": "~0.2.8",
