--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.2.16",
     "angular-resource": "~1.2.16",
     "angular-route": "~1.2.16",
-    "d3": "~3.4.8"
+    "d3": "~3.4.8",
+    "EaselJS": "*"
   }
 }
