--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-resource": "~1.2.16",
     "angular-route": "~1.2.16",
     "d3": "~3.4.8",
-    "EaselJS": "*"
+    "EaselJS": "*",
+    "jquery": "~2.1.1"
   }
 }
