adding some minor test coverage

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   },
   "require": {
     "intervention/image": "2.*",
-    "illuminate/http": "*"
+    "illuminate/http": "*",
+    "illuminate/filesystem": "*"
   }
 }
