--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,26 @@
 language: node_js
 node_js:
-  - '0.10'
+- '0.10'
 install:
-  - gem install sass
-  - gem install bourbon
-  - gem install neat
-  - npm install bower -g
-  - npm install grunt-cli -g
-  - bower install
-  - npm install
+- gem install sass
+- gem install bourbon
+- gem install neat
+- npm install bower -g
+- npm install grunt-cli -g
+- bower install
+- npm install
 script:
-  - echo "building $TRAVIS_COMMIT"
-  - echo "SOUNDCLOUD_KEY=thisisnotarealkey" > .env
-  - grunt release
+- echo "building $TRAVIS_COMMIT"
+- echo "SOUNDCLOUD_KEY=$SOUNDCLOUD_KEY" > .env
+- grunt release
 after_success:
-  - tar -cvzf "bakken-$TRAVIS_COMMIT.tar.gz" ./public/
-  - curl --ftp-create-dirs -T "bakken-$TRAVIS_COMMIT.tar.gz" -u $FTP_USER:$FTP_PASS "ftp://ftp.sizethreestudios.com/bakken-$TRAVIS_COMMIT.tar.gz"
-  - curl --ftp-create-dirs -T "bakken-$TRAVIS_COMMIT.tar.gz" -u $FTP_USER:$FTP_PASS "ftp://ftp.sizethreestudios.com/bakken-latest.tar.gz"
+- tar -cvzf "bakken-$TRAVIS_COMMIT.tar.gz" ./public/
+- curl --ftp-create-dirs -T "bakken-$TRAVIS_COMMIT.tar.gz" -u $FTP_USER:$FTP_PASS
+  "ftp://ftp.sizethreestudios.com/bakken-$TRAVIS_COMMIT.tar.gz"
+- curl --ftp-create-dirs -T "bakken-$TRAVIS_COMMIT.tar.gz" -u $FTP_USER:$FTP_PASS
+  "ftp://ftp.sizethreestudios.com/bakken-latest.tar.gz"
 env:
   global:
   - secure: BwWon+qxmuP9gY0e/ypd7i5cYbSO3xOXZrIek1Wx9hcLz3U56/rmubhZA0DmuGOgncAkkGOSCIni57XPHhrHMfwJh1k33wQUBav24kTMlFscKBKMndgjIQSNtgYBMwelcr+qJ+pjZymXaDspBVd2yoZDGdoQiPtXvW5mBIp5XjY=
   - secure: NVSWygYPyezQAZNx2BBOePWZrWvi0rXvdmJl7dgtvgqCI2AMgMhxsUjBnjNm7Gi94802sC5pRwkvgXd5lBVklwy4k/FJQgQLgBvB3R8bJwZ77w2dXxJrZrjj/37DYAeUlenV+ilg/o3bAf0GxzXDRvf1wWX2BtWMYQDVpoS94xs=
+  - secure: Zd2a6TSbLxnt0mkJwxV7bRn6kc3UD4ybWLchRAxeoo4hSDpVG5PL05oN34FBb4ugwxcdqb2TmU9EhlDZz1A3nVQialmGLAksYCcDrs3900RE0ysDwspT3tBXzLTyb9MTlzGyMs7Aud7RtytzGQ3OwwTvgtreJ6oMM9qWgnLgTMI=
