--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,13 @@ after_success:
 - curl --ftp-create-dirs -T "bakken-$TRAVIS_COMMIT.tar.gz" -u $FTP_USER:$FTP_PASS
   "ftp://ftp.sizethreestudios.com/bakken-latest.tar.gz"
 - git tag 0.0.${TRAVIS_BUILD_NUMBER}
-- git push --tags
+- git push -q https://${GITHUB_TOKEN}@github.com/dadleyy/bakken.git --tags
 env:
   global:
   - secure: BwWon+qxmuP9gY0e/ypd7i5cYbSO3xOXZrIek1Wx9hcLz3U56/rmubhZA0DmuGOgncAkkGOSCIni57XPHhrHMfwJh1k33wQUBav24kTMlFscKBKMndgjIQSNtgYBMwelcr+qJ+pjZymXaDspBVd2yoZDGdoQiPtXvW5mBIp5XjY=
   - secure: NVSWygYPyezQAZNx2BBOePWZrWvi0rXvdmJl7dgtvgqCI2AMgMhxsUjBnjNm7Gi94802sC5pRwkvgXd5lBVklwy4k/FJQgQLgBvB3R8bJwZ77w2dXxJrZrjj/37DYAeUlenV+ilg/o3bAf0GxzXDRvf1wWX2BtWMYQDVpoS94xs=
   - secure: Zd2a6TSbLxnt0mkJwxV7bRn6kc3UD4ybWLchRAxeoo4hSDpVG5PL05oN34FBb4ugwxcdqb2TmU9EhlDZz1A3nVQialmGLAksYCcDrs3900RE0ysDwspT3tBXzLTyb9MTlzGyMs7Aud7RtytzGQ3OwwTvgtreJ6oMM9qWgnLgTMI=
+  - secure: URlY5h+e7HjZEfEFTAGC+SSTC1F7SP1se16FaHoOMwVpq7rCzqwtPqHEqAPKHkKD8NP5I1LeBEUMvDHRgApNZzCF4xGVJCSrSNGeATudXfSmlnKgvrmz2NLOI3nTVvw0om4YEEv+Q6VCxOxmgNTSBIUpQqAhdfjjiDNADknpwxA=
 deploy:
   provider: releases
   api_key:
