--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,7 +6,7 @@ DirectoryIndex index.html
   RewriteEngine On
   RewriteBase /
 
-  RewriteRule ^api\/images\/?(.*)$ api.php/$1 [L]
+  RewriteRule ^api\/images\/(.*)$ http://$1 [P,L]
 
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
