--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
 script:
 - echo "building $TRAVIS_COMMIT"
 - echo "SOUNDCLOUD_KEY=$SOUNDCLOUD_KEY" > .env
+- echo "GOOGLE_ANALYTICS=$GOOGLE_ANALYTICS" >> .env
 - grunt release
 after_success:
 - tar -cvzf "bakken-$TRAVIS_COMMIT.tar.gz" ./public/
@@ -25,3 +26,4 @@ env:
   - secure: NVSWygYPyezQAZNx2BBOePWZrWvi0rXvdmJl7dgtvgqCI2AMgMhxsUjBnjNm7Gi94802sC5pRwkvgXd5lBVklwy4k/FJQgQLgBvB3R8bJwZ77w2dXxJrZrjj/37DYAeUlenV+ilg/o3bAf0GxzXDRvf1wWX2BtWMYQDVpoS94xs=
   - secure: Zd2a6TSbLxnt0mkJwxV7bRn6kc3UD4ybWLchRAxeoo4hSDpVG5PL05oN34FBb4ugwxcdqb2TmU9EhlDZz1A3nVQialmGLAksYCcDrs3900RE0ysDwspT3tBXzLTyb9MTlzGyMs7Aud7RtytzGQ3OwwTvgtreJ6oMM9qWgnLgTMI=
   - secure: URlY5h+e7HjZEfEFTAGC+SSTC1F7SP1se16FaHoOMwVpq7rCzqwtPqHEqAPKHkKD8NP5I1LeBEUMvDHRgApNZzCF4xGVJCSrSNGeATudXfSmlnKgvrmz2NLOI3nTVvw0om4YEEv+Q6VCxOxmgNTSBIUpQqAhdfjjiDNADknpwxA=
+  - secure: QnSpDRiTmTQGac78K89P1jxg/h7YQgR7V6+54scr4gaHO6dUfoAR8rr1YamzJxp0WSEmuKxy5136HLmFtwmK3fHBeWEVvNhWbT4uN+Xk04tTaHc3UOueMhZarqw+KivdbFc6jezt3OdDKfMgg15WDvFuJHtxZpH1de+Hca4zPe4=
