more gac configuration changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,4 @@ env:
   - secure: Zd2a6TSbLxnt0mkJwxV7bRn6kc3UD4ybWLchRAxeoo4hSDpVG5PL05oN34FBb4ugwxcdqb2TmU9EhlDZz1A3nVQialmGLAksYCcDrs3900RE0ysDwspT3tBXzLTyb9MTlzGyMs7Aud7RtytzGQ3OwwTvgtreJ6oMM9qWgnLgTMI=
   - secure: URlY5h+e7HjZEfEFTAGC+SSTC1F7SP1se16FaHoOMwVpq7rCzqwtPqHEqAPKHkKD8NP5I1LeBEUMvDHRgApNZzCF4xGVJCSrSNGeATudXfSmlnKgvrmz2NLOI3nTVvw0om4YEEv+Q6VCxOxmgNTSBIUpQqAhdfjjiDNADknpwxA=
   - secure: QnSpDRiTmTQGac78K89P1jxg/h7YQgR7V6+54scr4gaHO6dUfoAR8rr1YamzJxp0WSEmuKxy5136HLmFtwmK3fHBeWEVvNhWbT4uN+Xk04tTaHc3UOueMhZarqw+KivdbFc6jezt3OdDKfMgg15WDvFuJHtxZpH1de+Hca4zPe4=
+  - secure: QDXguews8cxzBoqA9Fa2zw8QCbz8bLr5Nn2Yc+TV3QGL9JAYvab1SQTl45B9KegOFoeZkpGmyuL3qrAuKRmEJMKOpiu4AzWHvrazyxjYpzm11KzgOJIAkZig+T3qDympl4fGPftWbc82ChQYZ99j+g7ktnbCTc+Yew3ZIwWtv30=
