--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "angular-route": "~1.2.16",
     "jquery": "~2.1.1",
     "soundmanager2": "*",
-    "angular-google-analytics": "~0.0.3"
+    "angular-google-analytics": "~0.0.3",
+    "zocial": "*",
+    "ionicons": "~1.5.2"
   }
 }
