--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,7 +5,7 @@ DirectoryIndex index.html
   # Turn mod_rewrite on
   RewriteEngine On
   RewriteBase /
-
+  RewriteRule ^bp/(.*)$ http://wp.bakken.fm/wp-json/$1 [P,L]
   RewriteRule ^api\/images\/(.*)$ http://$1 [P,L]
 
   RewriteCond %{REQUEST_FILENAME} !-f
